--- a/temp.html
+++ b/temp.html
@@ -21,6 +21,6 @@
         <p class="desc"></p>
       </div>
     </div>
-    <script src="temp.js"></script>
+    <script defer src="temp.js"></script>
   </body>
 </html>
